add logging middleware and fix artists, releases, songs
